# game

./: CMakeLists.txt  README.md  build.sh  config.ini
assets/: levels.json
assets/pack/: SAMVIETEN ASSETPACKS LICENSE.txt
include/: miniaudio.h
include/KHR/: khrplatform.h.gch
include/glad/: glad.h  glad.h.gch
shaders/: batch_quad.frag  batch_quad.vert  default.frag  default.vert  rounded_quad.frag  rounded_quad.vert
src/: glad.c  main.c
src/engine/: global.h  types.h
src/engine/animation/: animation.c  animation.h
src/engine/audio/: audio.c  audio.h
src/engine/config/: config.c  config.h
src/engine/editor/: editor.c  editor.h
src/engine/entity/: entity.c  entity.h
src/engine/input/: input.c  input.h
src/engine/io/: io.c  io.h
src/engine/physics/: physics.c  physics.h  physics_internal.h
src/engine/render/: render.c  render.h  render_init.c  render_internal.h  render_util.c
src/engine/time/: time.c  time.h
src/engine/ui/: ui.c  ui.h
src/engine/util/: util.c  util.h
